--- a/packages/client/src/stories/Introduction.mdx
+++ b/packages/client/src/stories/Introduction.mdx
@@ -220,7 +220,7 @@ We recommend building UIs with a [**component-driven**](https://componentdriven.
     </div>
     <span>
       <strong>Discord chat</strong>
-      Chat with maintainers and the community
+      Not implemented Yet
     </span>
   </a>
 </div>
